--- a/freer-effects.cabal
+++ b/freer-effects.cabal
@@ -55,13 +55,16 @@ flag test-hlint
 library
   hs-source-dirs:
       src
-  ghc-options: -Wall -fwarn-tabs -fwarn-implicit-prelude
+  ghc-options: -Wall -fwarn-tabs
   build-depends:
       base >=4.7 && <5
+    , monad-control
+    , transformers-base
+    , lifted-base
   if flag(pedantic)
     ghc-options: -Werror
   if impl(ghc >=8)
-    ghc-options: -Wredundant-constraints -Wmissing-import-lists
+    ghc-options: -Wredundant-constraints
   if impl(ghc >=7.10)
     cpp-options: -DDEPRECATED_LANGUAGE_OVERLAPPING_INSTANCES
   exposed-modules:
@@ -81,6 +84,7 @@ library
       Data.OpenUnion
       Data.OpenUnion.Internal
   other-modules:
+      Control.Monad.Freer.Test
       Paths_freer_effects
   default-language: Haskell2010
 
@@ -88,14 +92,17 @@ executable freer-examples
   main-is: Main.hs
   hs-source-dirs:
       examples/src
-  ghc-options: -Wall -fwarn-tabs -fwarn-implicit-prelude
+  ghc-options: -Wall -fwarn-tabs
   build-depends:
       base >=4.7 && <5
+    , monad-control
+    , transformers-base
+    , lifted-base
     , freer-effects
   if flag(pedantic)
     ghc-options: -Werror
   if impl(ghc >=8)
-    ghc-options: -Wredundant-constraints -Wmissing-import-lists
+    ghc-options: -Wredundant-constraints
   other-modules:
       Capitalize
       Console
@@ -110,13 +117,16 @@ test-suite hlint
   main-is: hlint.hs
   hs-source-dirs:
       tests
-  ghc-options: -Wall -fwarn-tabs -fwarn-implicit-prelude -threaded -with-rtsopts=-N
+  ghc-options: -Wall -fwarn-tabs -threaded -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , monad-control
+    , transformers-base
+    , lifted-base
   if flag(pedantic)
     ghc-options: -Werror
   if impl(ghc >=8)
-    ghc-options: -Wredundant-constraints -Wmissing-import-lists
+    ghc-options: -Wredundant-constraints
   if flag(test-hlint)
     build-depends:
         hlint >=1.9
@@ -130,9 +140,12 @@ test-suite unit
   main-is: Tests.hs
   hs-source-dirs:
       tests
-  ghc-options: -Wall -fwarn-tabs -fwarn-implicit-prelude
+  ghc-options: -Wall -fwarn-tabs
   build-depends:
       base >=4.7 && <5
+    , monad-control
+    , transformers-base
+    , lifted-base
     , QuickCheck
     , freer-effects
     , tasty
@@ -141,7 +154,7 @@ test-suite unit
   if flag(pedantic)
     ghc-options: -Werror
   if impl(ghc >=8)
-    ghc-options: -Wredundant-constraints -Wmissing-import-lists
+    ghc-options: -Wredundant-constraints
   other-modules:
       Tests.Coroutine
       Tests.Exception
@@ -157,9 +170,12 @@ benchmark core
   main-is: Core.hs
   hs-source-dirs:
       bench
-  ghc-options: -Wall -fwarn-tabs -fwarn-implicit-prelude -O2
+  ghc-options: -Wall -fwarn-tabs -O2
   build-depends:
       base >=4.7 && <5
+    , monad-control
+    , transformers-base
+    , lifted-base
     , criterion
     , extensible-effects >= 1.11 && < 1.12
     , free
@@ -168,5 +184,5 @@ benchmark core
   if flag(pedantic)
     ghc-options: -Werror
   if impl(ghc >=8)
-    ghc-options: -Wredundant-constraints -Wmissing-import-lists
+    ghc-options: -Wredundant-constraints
   default-language: Haskell2010
